--- a/public/styles/login-register.css
+++ b/public/styles/login-register.css
@@ -79,7 +79,7 @@ label[for="female"] {
 input[type="nickname"],
 input[type="password"],
 input[type="number"],
-input[type="email"] {
+input[type="username"] {
     background: #ecf0f3;
     padding: 30px;
     padding-left: 20px;
