--- a/public/styles/create-edit.css
+++ b/public/styles/create-edit.css
@@ -11,7 +11,7 @@
     box-shadow: 0px 0px 32px 0px #32485e, -14px -14px 20px #191c21;
 }
 
-input[type="text"] {
+input[type="text"], option {
     background: #ecf0f3;
     padding: 30px;
     padding-left: 20px;
@@ -35,4 +35,11 @@ textarea {
     margin-top: 7px;
     color: black;
     box-shadow: inset 6px 6px 6px #c0c2c5, inset -6px -6px 6px white;
+}
+
+select {
+    width: 100%;
+    font-size: 26px;
+    height: 50px;
+    border-radius: 50px;
 }
